# img_resize_xlys

./: .gitignore  CMakeLists.txt  image_resize.cpp  image_resize.h  main.cpp
include/: threshold_partition.h
src/: color_inversion.cpp  color_inversion.h  contour_tools.cpp  contour_tools.h  threshold_partition.cpp
